# MMS185-Stability-and-design-basis-for-marine-structures

./: README.md  environment.yml  pyproject.toml  requirements.txt
src/mms185/: helpers.py  simpson.py  sympy.py
tutorial1/: 00.01_simpsons_rule.ipynb  01.01_calculation_of_waterplane_area.ipynb  01.01_simpsons_rule.ipynb  01.02_displacement_and_LCB_of_a_sailing_yacht.ipynb  01.04_Stability_calculation_of_a_fishing_vessel.ipynb  02.03_loading_a_ship.ipynb
tutorial2/: 02.01_Inclining_experiment_1.ipynb  02.02_Inclining_experiment_2.ipynb
tutorial4/: 04.01_Floating_shoe_box.ipynb  06.01_stability_book.ipynb  06.02_sailingyacht_in_a_gust.ipynb  MS_Winter_Moon.csv
tutorial5/: 05.03_loading_a_ship.ipynb
tutorial6/: 00.01_retrimming.ipynb  05.02_retrimming_ms_winter_moon.ipynb
tutorial7/: 07.02_a_box_shaped_barge.ipynb
tutorial8/: 06.01_ms_white_moon.ipynb
