[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mms185"
version = "0.0.1"
authors = [
  { name="Martin Alexandersson", email="maralex@chalmers.se" },
]
description = "Helping packages for the Chalmers course MMS185"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/martinlarsalbert/MMS185-Stability-and-design-basis-for-marine-structures"